Changed witch pics

--- a/witches.html
+++ b/witches.html
@@ -28,7 +28,7 @@
 
         <div class="flex-container">
             <div class="flex-item">
-                <img class="section-item" src="images/south.jpg" alt="The Witch of the West">
+                <img class="section-item" src="images/south.jpg" alt="The Witch of the South">
                     <p>The Good Witch of the South is Glinda the Good. She is the most powerful of the Witches. According
                         to the Soldier with Green
                         Whiskers, Glinda:</p>
@@ -42,7 +42,7 @@
                     </img>
             </div>
             <div class="flex-item">
-                <img class="section-item" src="images/south.jpg" alt="The Witch of the West">
+                <img class="section-item" src="images/east.jpg" alt="The Witch of the East">
                     <p>The Good Witch of the South is Glinda the Good. She is the most powerful of the Witches. According
                         to the Soldier with Green
                         Whiskers, Glinda:</p>
@@ -56,7 +56,7 @@
                     </img>
             </div>
                 <div class="flex-item">
-                    <img class="section-item" src="images/south.jpg" alt="The Witch of the West">
+                    <img class="section-item" src="images/west.jpg" alt="The Witch of the West">
                         <p>The Good Witch of the South is Glinda the Good. She is the most powerful of the Witches. According
                             to the Soldier with Green
                             Whiskers, Glinda:</p>
